--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=8080
 #\u5F00\u542Faop
 spring.aop.proxy-target-class=true
 
@@ -6,7 +6,7 @@ spring.aop.proxy-target-class=true
 # Redis\u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A0\uFF09
 spring.redis.database=0
 # Redis\u670D\u52A1\u5668\u5730\u5740
-spring.redis.host=localhost
+spring.redis.host=184.170.220.217
 # Redis\u670D\u52A1\u5668\u8FDE\u63A5\u7AEF\u53E3
 spring.redis.port=6379
 # Redis\u670D\u52A1\u5668\u8FDE\u63A5\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
