--- a/pom.xml
+++ b/pom.xml
@@ -87,9 +87,30 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!--validate校验-->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
+		<finalName>test-params-validate</finalName>
+		<resources>
+			<!--解决上面的配置导致resources没打包-->
+			<resource>
+				<directory>src/main/resources</directory>
+				<includes>
+					<include>**/*.json</include>
+				</includes>
+				<filtering>false</filtering>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
